--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IpcimWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="300" Width="550">
     <Grid>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <DataGrid x:Name="dataGrid" Margin="15"/>
+        <StackPanel Orientation="Vertical" Margin="5" Grid.Column="1" HorizontalAlignment="Left">
+            <Label Content="Domain-name:" Margin="5"/>
+            <TextBox x:Name="domainName" Width="150" Height="15" Margin="5"/>
+            <Label Content="IP cím:" Margin="5"/>
+            <TextBox x:Name="ipAddress" Width="150" Height="15" Margin="5"/>
+            <Button Content="Bevitel" Width="50" HorizontalAlignment="Left" Margin="5"/>
+            <Button Content="Mentés" Width="50" HorizontalAlignment="Left" Margin="5"/>
+        </StackPanel>
     </Grid>
 </Window>
