--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IpcimWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="550">
+        Title="IpcimWPF" Height="300" Width="550">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
