Domain név és IP cím feltöltés.

--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -14,10 +14,10 @@
         <DataGrid x:Name="dataGrid" Margin="15"/>
         <StackPanel Orientation="Vertical" Margin="5" Grid.Column="1" HorizontalAlignment="Left">
             <Label Content="Domain-name:" Margin="5"/>
-            <TextBox x:Name="domainName" Width="150" Height="15" Margin="5"/>
+            <TextBox x:Name="domainName" Width="150" Height="20" Margin="5"/>
             <Label Content="IP cím:" Margin="5"/>
-            <TextBox x:Name="ipAddress" Width="150" Height="15" Margin="5"/>
-            <Button Content="Bevitel" Width="50" HorizontalAlignment="Left" Margin="5"/>
+            <TextBox x:Name="ipAddress" Width="150" Height="20" Margin="5"/>
+            <Button Content="Bevitel" Width="50" HorizontalAlignment="Left" Margin="5" Click="bevitel"/>
             <Button Content="Mentés" Width="50" HorizontalAlignment="Left" Margin="5"/>
         </StackPanel>
     </Grid>
